# RAG-PRS

./: .gitignore  GUIDE.md  docker-compose.yml  temp.js  test_router_manual.txt
backend/: Dockerfile  diag_retrieval.py  generate_itsar_json.py  pyproject.toml  reset_db.py  retrieval_report.md  run_profile.py  seed_db.py  test_router.txt
backend/.tmp_test_llm_cache/0c71280b-d2e7-4487-9c65-dd4ca460bf0c/: 681cf210ed4b5ae5cc908d6783e1d787-j4emoffn.tmp
backend/app/: database.py  main.py
backend/app/analysis/: aggregator.py  applicability.py  capability_ledger.py  evidence_quality.py  grounding_verifier.py  negation_detector.py  orchestrator.py  prohibition.py  tier1_semantic.py  tier2_capability.py  tier3_llm.py
backend/app/api/: assessments.py  documents.py  standards.py
backend/app/ingestion/: chunker.py  embedder.py  indexer.py
backend/app/knowledge/: capability_extractor.py  ontology.py
backend/app/models/: assessment.py  document.py  requirement.py  standard.py
backend/app/retrieval/: hybrid_retriever.py  numeric_extractor.py  query_expander.py  reranker.py
backend/app/schemas/: assessment.py  capability.py  document.py  standard.py
backend/knowledge_base/: ontology.json
backend/knowledge_base/frameworks/: itsar_ip_router.json
backend/scripts/: evaluate_retriever.py  extract_ocr.py  extract_ocr2.py  generate_json.py  parse_pdf_to_json.py
backend/tests/test_analysis/: test_analysis.py
backend/tests/test_api/: test_assessments.py  test_capability.py  test_standards.py
backend/tests/test_ingestion/: test_adapter.py  test_extractor.py  (+1 more)
(+27 files in other folders)
