[project]
name = "prs-backend"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.1",
    "sqlalchemy[asyncio]>=2.0.30",
    "aiosqlite>=0.20.0",
    "alembic>=1.13.1",
    "pydantic>=2.7.1",
    "pydantic-settings>=2.3.1",
    "qdrant-client>=1.9.1",
    "sentence-transformers>=3.0.1",
    "rank-bm25>=0.2.2",
    "networkx>=3.3",
    "spacy>=3.7.4",
    "docling>=2.107.0",
    "pdfplumber>=0.11.0",
    "python-docx>=1.1.2",
    "python-multipart>=0.0.9",
    "reportlab>=4.2.2",
    "openpyxl>=3.1.4",
    "httpx>=0.27.0",
    "python-jose>=3.3.0",
    "aiofiles>=23.2.1",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "httpx"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
